# nodeskclaw

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  dev.sh  docker-compose.yml  package-lock.json
.github/workflows/: quality-gate.yml
deploy/k8s/: backend.yaml  ingress.yaml  portal.yaml
docs/: Compute-Provider-Deployment-Guide.md  DB_TABLE_CONVENTION.md  Platform-Providers-Admin-API.md  Runtime-Image-Build-Guide.md  agent通信协议.md  nodeskclaw-agent-protocol-v1.md  信息安全方案.html  启动指南.md  技术架构图.html  智能平台环境配置指引.md  权限控制配置.md  系统部署图.html
docs/admin/: super-admin-guide.md
ee/backend/: __init__.py  router.py
ee_backup/: __init__.py
ee_backup/backend/: router.py
hermes-nodeskclaw-bridge/: pyproject.toml
hermes-nodeskclaw-bridge/src/hermes_nodeskclaw_bridge/: __init__.py  __main__.py  client.py  hermes_channel.py  plugin.py
hermes-nodeskclaw-bridge/tests/: test_plugin.py
nodeskclaw-artifacts/: README.md  build.sh
nodeskclaw-artifacts/hermes-image/: Dockerfile  docker-entrypoint.sh
nodeskclaw-artifacts/openclaw-image/: Dockerfile  docker-entrypoint.sh  openclaw.json.template
nodeskclaw-backend/: .env.example  Dockerfile  entrypoint.sh
nodeskclaw-backend/app/: main.py
nodeskclaw-backend/tests/: conftest.py  test_admin_gene_route_auth.py  test_agent_knowledge_api.py  test_agent_knowledge_service.py  test_auth_rate_limit.py  test_blackboard_task_pagination.py  test_channel_configs_extract.py  test_delete_skill_by_name.py  (+43 more)
nodeskclaw-llm-proxy/: .env.example
nodeskclaw-portal/: package-lock.json  tsconfig.app.json  vite.config.ts
(+347 files in other folders)
