[project]
name = "hermes-nodeskclaw-bridge"
version = "0.1.0"
description = "NoDeskClaw tunnel bridge for Hermes runtime"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0", "httpx>=0.27"]

[project.scripts]
hermes-nodeskclaw-bridge = "hermes_nodeskclaw_bridge.__main__:main"

[project.entry-points."hermes_agent.plugins"]
nodeskclaw = "hermes_nodeskclaw_bridge.plugin"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
